[package]
name = "aers"
version = "0.1.0"
authors = ["Aanand Kainth <aanand@akainth.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feather_m4 = "0.7.0"
cortex-m = "0.7.1"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.13"
